# libght

./: .gitignore  .travis.yml  CMakeLists.txt  CODE.rst  COPYRIGHT  Makefile  README.rst  config.mk
cmake/: cmake_clean.sh
src/: CMakeLists.txt  Makefile  bytebuffer.c  bytebuffer.h  ght.h  ght_attribute.c  ght_bytebuffer.c  ght_config.h.in  ght_core.h  ght_hash.c  ght_internal.h  ght_mem.c  ght_mem.h  ght_node.c  ght_schema.c  ght_serialize.c  ght_stringbuffer.c  ght_stringbuffer.h  ght_tree.c  ght_util.c  stringbuffer.c  stringbuffer.h
test/: CMakeLists.txt  Makefile  cu_ght_attribute.c  cu_ght_core.c  cu_ght_schema.c  cu_ght_tree.c  cu_tester.c  cu_tester.h
test/data/: simple-data.tsv
tools/: CMakeLists.txt  las2ght.c
